inicio da homepage

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
     <main class="materiais">
 		<section class="material" id="papel">
-			<img src="images/recicle.png" alt="">
+			<img src="assets/images/recicle.png" alt="">
 			<h2>Papel</h2>
 		</section>
 	
 		<section class="material" id="plastico">
-			<img src="images/recicle.png" alt="">
+			<img src="assets/images/recicle.png" alt="">
 			<h2>Plástico</h2>
 		</section>
 		
 		<section class="material" id="vidro">
-			<img src="images/recicle.png" alt="">
+			<img src="assets/images/recicle.png" alt="">
 			<h2>Vidro</h2>
 		</section>
 	
 		<section class="material" id="metal">
-			<img src="images/recicle.png" alt="">
+			<img src="assets/images/recicle.png" alt="">
 			<h2>Metal</h2>
 		</section>
 	
