--- a/home.html
+++ b/home.html
@@ -26,12 +26,15 @@
 		</nav>
 	</header>
 
-	<div class="textaside">
+	<div class="firstview">
+		<div class="textaside">
+			
+			<h1>Reciclagem</h1>
+			<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
+		</div>
 		
-		<h1>Reciclagem</h1>
-		<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
-
 		<img src="assets/images/recycling_homepage.png" alt="">
+
 	</div>
 
 
