--- a/login.html
+++ b/login.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/login.css">
-</head>
-<body>
-  <div class="leftSideLogin">
-    
-  </div>
-  <div class="rightSideLogin">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  </head>
 
-  </div>
-</body>
+  <body>
+    <div class="fundo">
+      <div class="row">
+        <div class="leftSideLogin">
+          <h1>Nome</h1>
+          <img src="assets/images/arvore.png" />
+        </div>
+
+        <div class="rightSideLogin">
+          <legend>Login</legend>
+          <form action="">
+            <label for="name">Nome de usuário</label>
+            <input type="text" id="name">
+            <label for="password">Senha</label>
+            <input type="password" id="password">
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
