homepage com maior responsividade

--- a/home.html
+++ b/home.html
@@ -17,29 +17,52 @@
 </head>
 
 <body>
-	<header>
-		<p>logo</p>
+	<nav>
 		<h1>trash</h1>
-		<nav>
-			<a href="">Início</a>
-			<a href="">Sobre Nós</a>
-			<a href="">Contato</a>
-			<a href="">Entrar</a>
-		</nav>
-	</header>
 
-	<div class="firstview">
-		<div class="textaside">
+		<ul>
+			<li><a href="#inicio">Início</a></li>
+			<li><a href="#sobre">Sobre Nós</a></li>
+			<li><a href="#contato">Contato</a></li>
+			<li><a href="">Entrar</a></li>
+		</ul>
+	</nav>
+
+	<main>
+		<section id="inicio">	
 			
-			<h1>Reciclagem</h1>
-			<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
-		</div>
+			<div class="textAside">
+				
+				<h1>Reciclagem</h1>
+				<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
+			</div>
+			
+			<img src="assets/images/recycling_homepage.png" alt="">
+	
+		</section>
+	
 		
-		<img src="assets/images/recycling_homepage.png" alt="">
+		<section id="sobre">
+	
+			<h1>Sobre Nós</h1> 
 
-	</div>
+			<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
+	
+		</section>
+	
+		
+		<section id="contato">
+	
+			<h1>Contato</h1>
 
-
+			<div class="form">
+				<label for="">Nome <input type="text"></label>
+				<label for="">E-mail <input type="email"></label>
+				<label for="">Mensagem <textarea name="" id="" cols="30" rows="10"></textarea></label>
+			</div>
+	
+		</section>
+	</main>
 
 </body>
 
