--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<meta charset="UTF-8" />
@@ -34,7 +34,7 @@
 			<div class="textAside">
 				
 				<h1>Reciclagem</h1>
-				<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
+				<p>A reciclagem é o processo de reaproveitamento de materiais descartados. Seu objetivo é reintroduzi-los na cadeia produtiva a fim de que ainda gerem valor e sejam reutilizados, reduzindo-se a produção de lixo, aumentando a preservação dos recursos naturais e melhorando a qualidade de vida das pessoas.</p>
 			</div>
 			
 			<img src="assets/images/recycling_homepage.png" alt="">
@@ -46,7 +46,9 @@
 	
 			<h1>Sobre Nós</h1> 
 
-			<p>Etiam augue sem, venenatis vel enim vitae, vulputate luctus dui. Quisque nec sollicitudin purus. Quisque nunc diam, tempus eu lobortis eget, ullamcorper a quam. Nam euismod, tortor ut aliquet malesuada, metus orci congue urna, in blandit erat tortor nec ligula. Donec malesuada est in odio vestibulum fringilla. Donec hendrerit volutpat dui, in pharetra nunc vehicula et. Proin eget elit felis. Sed sodales aliquet felis in suscipit. Duis et suscipit turpis, eget tempus felis.</p>
+			<img src="assets/images/office.png" alt="">
+
+			<p>Fundada em 2022 a partir de um projeto acadêmico a/o "NOME" é constituida por 4 alunos de Engenharia de Software da PUCCAMP, com a ideia de aplicar a Sustentabilidade no dia a dia das pessoas por meio da <a href="#inicio">reciclagem</a>, que apesar de muito comentada é pouco executada. Por conta disso dispertou nosso interesse em fazer a diferença e exercitar diariamente isto que deve-se tornar hábito na vida de todos.</p>
 	
 		</section>
 	
@@ -56,13 +58,47 @@
 			<h1>Contato</h1>
 
 			<div class="form">
-				<label for="">Nome <input type="text"></label>
-				<label for="">E-mail <input type="email"></label>
-				<label for="">Mensagem <textarea name="" id="" cols="30" rows="10"></textarea></label>
+				<!--
+				<label for="nome">Nome <input type="text" id="nome"></label>
+				<label for="mail">E-mail<input type="email" id="mail" ></label>
+				<label for="mensagem">Mensagem <textarea name="" id="mensagem" cols="30" rows="10"></textarea></label>
+				-->
+
+				<div class="single-input">
+					<input type="text" name="" id="nome" required>
+					<label for="nome">Nome</label>
+				</div>
+
+				<div class="single-input">
+					<input type="email" name="" id="mail" required>
+					<label for="mail">E-mail</label>
+				</div>
+
+				<div class="single-input">
+					<input type="text" name="" id="mensagem" required>
+					<label for="mensagem">Mensagem</label>
+				</div>
+
+				<button>
+					<div class="svg-wrapper-1">
+					  <div class="svg-wrapper">
+						<svg viewBox="0 0 24 24" width="24" height="24">
+						  <path fill="none" d="M0 0h24v24H0z"></path>
+						  <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+						</svg>
+					  </div>
+					</div>
+					<span>Enviar</span>
+				  </button>
+
 			</div>
 	
 		</section>
 	</main>
+
+	<footer>
+		<p>&#169; Todos os direitos reservados</p>
+	</footer>
 
 </body>
 
