--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 			<li><a href="#inicio">Início</a></li>
 			<li><a href="#sobre">Sobre Nós</a></li>
 			<li><a href="#contato">Contato</a></li>
-			<li><a href="">Entrar</a></li>
+			<li><a href="login.html">Entrar</a></li>
 		</ul>
 	</nav>
 
@@ -58,11 +58,6 @@
 			<h1>Contato</h1>
 
 			<div class="form">
-				<!--
-				<label for="nome">Nome <input type="text" id="nome"></label>
-				<label for="mail">E-mail<input type="email" id="mail" ></label>
-				<label for="mensagem">Mensagem <textarea name="" id="mensagem" cols="30" rows="10"></textarea></label>
-				-->
 
 				<div class="single-input">
 					<input type="text" name="" id="nome" required>
