nova coleta pt1

--- a/newCollect.html
+++ b/newCollect.html
@@ -52,7 +52,17 @@
             <li><input type="radio" id="noite" name="periodo"><label for="noite">Noite</label></li>
         </ul>
 
-        <button>Finalizar</button>
+        <div class="single-input">
+            <input type="text" name="" id="obs" placeholder="                           ex: Vidro quebrado" required>
+            <label for="obs">Observação</label>
+        </div>
+
+        <div class="single-input" id="peso">
+            <input type="number" name="" id="qntd" placeholder="" required>
+            <label for="qntd">Peso aproximado (kg)</label>
+        </div>
+
+        <button>continuar</button>
 
     </main>
 
