aba endereços no cliente

--- a/client.html
+++ b/client.html
@@ -28,6 +28,7 @@
             <ul>
                 <li><p>Dados</p></li>
                 <li><a href="">Meus Dados</a></li>
+                <li><a href="">Endereços</a></li>
                 <li><p>Coletas</p></li>
                 <li><a href="">Solicitadas</a></li>
                 <li><a href="">Agendadas</a></li>
