primeira versao prototipo front-end

--- a/client.html
+++ b/client.html
@@ -51,13 +51,15 @@
 
         <div class="line">
             
-            <button id="newCollect">+</button>
+            <button id="newCollect" onclick="newCollect()">+</button>
             <label for="newCollect">Nova Coleta</label>
             
         </div>
 
 
     </main>
+
+    <script type="text/javascript" src="js/index.js"></script>
 
 </body>
 
