--- a/newCollect.html
+++ b/newCollect.html
@@ -62,9 +62,11 @@
             <label for="qntd">Peso aproximado (kg)</label>
         </div>
 
-        <button>continuar</button>
+        <button onclick="chooseAddress()">continuar</button>
 
     </main>
+
+    <script type="text/javascript" src="js/index.js"></script>
 
 </body>
 
