--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/login.css">
@@ -49,57 +49,185 @@
 
 				<button onclick="logIn()">Entrar</button>
 
-				<div class="div">	</div>
+				<div class="div"> </div>
 
 				<p>Não tem uma conta?</p>
 
 				<button class="newAccount">Criar nova conta</button>
 
-				<div class="popup-wrapper"><!-- Início Wrapper -->
-
-					<div class="contas"><!-- Contas -->
-
-						<div class="popup-close">x</div>
-
-						<div class="popup-content">
-
-							<button class="popup-cliente">cliente</button>
-
-							<button class="popup-catador">catador</button>
-
-						</div>
-
-					</div>
-
-					<div class="cliente">
-
-						<div class="popup-return">	
-							&#8592;</div>
-
-						<div class="popup-content">
-
-							<h1>CLIENTE</h1>
-
-						</div>
-
-					</div>
-
-					<div class="catador">
-
-						<div class="popup-return">	
-							&#8592;</div>
-
-						<div class="popup-content">
-
-							<h1>CATADOR</h1>
-
-						</div>
-
-					</div>
-
-				</div><!-- Fim Wrapper -->
-
 			</div>
+
+			<div class="popup-wrapper">
+				<!-- Início Wrapper -->
+
+				<div class="contas">
+					<!-- Contas -->
+
+					<div class="popup-close">x</div>
+
+					<div class="popup-content">
+
+						<button class="popup-cliente">cliente</button>
+
+						<button class="popup-catador">catador</button>
+
+					</div>
+
+				</div>
+
+				<div class="cliente">
+
+					<div class="popup-return">&#8592;</div>
+
+					<div class="popup-close">x</div>
+
+					<div class="popup-content">
+
+						<h1>Nova Conta - CLIENTE</h1>
+
+						<label for="">Nome</label>
+						<input type="text" name="" id="">
+						<label for="">Sobrenome</label>
+						<input type="text" name="" id="">
+
+						<label for="">Nome de usuário</label>
+						<input type="text" name="" id="">
+
+						<label for="">Telefone</label>
+						<input type="tel" name="" id="">
+
+						<label for="">E-mail</label>
+						<input type="email" name="" id="">
+						<label for="">Confirmação de E-mail</label>
+						<input type="email" name="" id="">
+
+						<label for="">Senha</label>
+						<input type="password" name="" id="">
+						<label for="">Confirmação de Senha</label>
+						<input type="password" name="" id="">
+
+						<label for="">Data de Nascimento</label>
+						<input type="date" name="" id="">
+
+						<label for="">Gênero</label>
+						<div class="gender">
+
+							<input type="radio" name="gen" id="male"><label for="male">Masculino</label>
+							<input type="radio" name="gen" id="female"><label for="female">Femenino</label>
+							<input type="radio" name="gen" id="other"><label for="other">Outro</label>
+
+						</div>
+
+						<button>cadastrar</button>
+
+					</div>
+
+				</div>
+
+				<div class="catador">
+
+					<div class="popup-return">&#8592;</div>
+
+					<div class="popup-close">x</div>
+
+					<div class="popup-content">
+
+						<h1>Nova Conta - CATADOR</h1>
+
+						<label for="">Nome</label>
+						<input type="text" name="" id="">
+						<label for="">Sobrenome</label>
+						<input type="text" name="" id="">
+
+						<label for="">Nome de usuário</label>
+						<input type="text" name="" id="">
+
+						<label for="">Telefone</label>
+						<input type="tel" name="" id="">
+
+						<label for="">E-mail</label>
+						<input type="email" name="" id="">
+						<label for="">Confirmação de E-mail</label>
+						<input type="email" name="" id="">
+
+						<label for="">Senha</label>
+						<input type="password" name="" id="">
+						<label for="">Confirmação de Senha</label>
+						<input type="password" name="" id="">
+
+						<label for="">Data de Nascimento</label>
+						<input type="date" name="" id="">
+
+						<label for="">Gênero</label>
+						<div class="gender">
+
+							<input type="radio" name="gen" id="male"><label for="male">Masculino</label>
+							<input type="radio" name="gen" id="female"><label for="female">Femenino</label>
+							<input type="radio" name="gen" id="other"><label for="other">Outro</label>
+
+						</div>
+
+						<button class="continue-catador">continuar</button>
+
+					</div>
+
+				</div>
+
+				<div class="catador2">
+
+					<div class="popup-return-catador2">&#8592;</div>
+
+					<div class="popup-close">x</div>
+
+					<div class="popup-content">
+
+						<label for="typeOfCatador">Selecione o tipo de catador</label>
+						<select name="" id="typeOfCatador">
+							<option value="">Selecione o tipo de catador</option>
+							<option value="">Independente</option>
+							<option value="">Cooperativa</option>
+						</select>
+
+						<h2>Quais materiais deseja coletar?</h2>
+						<ul class="materiais">
+							<li><input type="checkbox" id="papel"><label for="papel">Papel</label></li>
+							<li><input type="checkbox" id="plastico"><label for="plastico">Plastico</label></li>
+							<li><input type="checkbox" id="metal"><label for="metal">Metal</label></li>
+							<li><input type="checkbox" id="vidro"><label for="vidro">Vidro</label></li>
+							<li><input type="checkbox" id="entulho"><label for="entulho">Entulho</label></li>
+							<li><input type="checkbox" id="eletronico"><label for="eletronico">Eletrônico</label></li>
+							<li><input type="checkbox" id="moveis"><label for="moveis">Móveis</label></li>
+							<li><input type="checkbox" id="outros"><label for="outros">Outros</label></li>
+						</ul>
+
+
+						<h2>Qual melhor dia para realizar a coleta?</h2>
+						<ul class="dias">
+							<li><input type="radio" id="segunda" name="dia"><label for="segunda">Segunda-Feira</label>
+							</li>
+							<li><input type="radio" id="terca" name="dia"><label for="terca">Terça-Feira</label></li>
+							<li><input type="radio" id="quarta" name="dia"><label for="quarta">Quarta-Feira</label></li>
+							<li><input type="radio" id="quinta" name="dia"><label for="quinta">Quinta-Feira</label></li>
+							<li><input type="radio" id="sexta" name="dia"><label for="sexta">Sexta-Feira</label></li>
+							<li><input type="radio" id="sabado" name="dia"><label for="sabado">Sábado</label></li>
+							<li><input type="radio" id="domingo" name="dia"><label for="domingo">Domingo</label></li>
+							<li><input type="radio" id="feriado" name="dia"><label for="feriado">Feriados</label></li>
+						</ul>
+
+						<h2>Qual período mais adequado?</h2>
+						<ul class="periodo">
+							<li><input type="radio" id="manha" name="periodo"><label for="manha">Manhã</label></li>
+							<li><input type="radio" id="tarde" name="periodo"><label for="tarde">Tarde</label></li>
+							<li><input type="radio" id="noite" name="periodo"><label for="noite">Noite</label></li>
+						</ul>
+
+						<button>cadastrar</button>
+
+					</div>
+
+				</div>
+
+			</div><!-- Fim Wrapper -->
 
 		</div>
 	</main>
