inicio integracao com o banco

--- a/login.html
+++ b/login.html
@@ -84,41 +84,46 @@
 					<div class="popup-content">
 
 						<h1>Nova Conta - CLIENTE</h1>
+						
+						<form action="">
 
-						<label for="">Nome</label>
-						<input type="text" name="" id="">
-						<label for="">Sobrenome</label>
-						<input type="text" name="" id="">
+							<label for="">Nome</label>
+							<input type="text" name="" id="name" class="name">
+							<label for="">Sobrenome</label>
+							<input type="text" name="" id="" class="lastName">
+	
+							<label for="">Nome de usuário</label>
+							<input type="text" name="" id="" class="userName">
+	
+							<label for="">Telefone</label>
+							<input type="tel" name="" id="" class="tel">
+	
+							<label for="">E-mail</label>
+							<input type="email" name="" id="" class="email">
+							<label for="">Confirmação de E-mail</label>
+							<input type="email" name="" id="" class="emailConf">
+	
+							<label for="">Senha</label>
+							<input type="password" name="" id="" class="password">
+							<label for="">Confirmação de Senha</label>
+							<input type="password" name="" id="" class="passwordConf">
+	
+							<label for="">Data de Nascimento</label>
+							<input type="date" name="" id="" class="birthDay">
+	
+							<label for="">Gênero</label>
+							<div class="gender">
+	
+								<input type="radio" name="gen" id="male"><label for="male">Masculino</label>
+								<input type="radio" name="gen" id="female"><label for="female">Femenino</label>
+								<input type="radio" name="gen" id="other"><label for="other">Outro</label>
+	
+							</div>
+	
+							<button>cadastrar</button>
 
-						<label for="">Nome de usuário</label>
-						<input type="text" name="" id="">
+						</form>
 
-						<label for="">Telefone</label>
-						<input type="tel" name="" id="">
-
-						<label for="">E-mail</label>
-						<input type="email" name="" id="">
-						<label for="">Confirmação de E-mail</label>
-						<input type="email" name="" id="">
-
-						<label for="">Senha</label>
-						<input type="password" name="" id="">
-						<label for="">Confirmação de Senha</label>
-						<input type="password" name="" id="">
-
-						<label for="">Data de Nascimento</label>
-						<input type="date" name="" id="">
-
-						<label for="">Gênero</label>
-						<div class="gender">
-
-							<input type="radio" name="gen" id="male"><label for="male">Masculino</label>
-							<input type="radio" name="gen" id="female"><label for="female">Femenino</label>
-							<input type="radio" name="gen" id="other"><label for="other">Outro</label>
-
-						</div>
-
-						<button>cadastrar</button>
 
 					</div>
 
@@ -133,7 +138,7 @@
 					<div class="popup-content">
 
 						<h1>Nova Conta - CATADOR</h1>
-
+						<!-- Envolver em form -->
 						<label for="">Nome</label>
 						<input type="text" name="" id="">
 						<label for="">Sobrenome</label>
