--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
 
 						<h1>Nova Conta - CLIENTE</h1>
 						
-						<form action="">
+						<form class="registerClient">
 
 							<label for="">Nome</label>
 							<input type="text" name="" id="name" class="name">
@@ -96,7 +96,7 @@
 							<input type="text" name="" id="" class="userName">
 	
 							<label for="">Telefone</label>
-							<input type="tel" name="" id="" class="tel">
+							<input type="tel" name="" id="" class="phone">
 	
 							<label for="">E-mail</label>
 							<input type="email" name="" id="" class="email">
@@ -139,31 +139,31 @@
 
 						<h1>Nova Conta - CATADOR</h1>
 						<!-- Envolver em form -->
-						<form action="">
+						<form class="registerScavenger">
 
 							<label for="">Nome</label>
-							<input type="text" name="" id="" class="name">
+							<input type="text" name="" id="" class="nameScavenger">
 							<label for="">Sobrenome</label>
-							<input type="text" name="" id="" class="lastName">
+							<input type="text" name="" id="" class="lastNameScavenger">
 	
 							<label for="">Nome de usuário</label>
-							<input type="text" name="" id="" class="userName">
+							<input type="text" name="" id="" class="userNameScavenger">
 	
 							<label for="">Telefone</label>
-							<input type="tel" name="" id="" class="tel">
+							<input type="tel" name="" id="" class="phoneScavenger">
 	
 							<label for="">E-mail</label>
-							<input type="email" name="" id="" class="email">
+							<input type="email" name="" id="" class="emailScavenger">
 							<label for="">Confirmação de E-mail</label>
-							<input type="email" name="" id="" class="emailConf">
+							<input type="email" name="" id="" class="emailConfScavenger">
 	
 							<label for="">Senha</label>
-							<input type="password" name="" id="" class="password">
+							<input type="password" name="" id="" class="passwordScavenger">
 							<label for="">Confirmação de Senha</label>
-							<input type="password" name="" id="" class="passwordConf">
+							<input type="password" name="" id="" class="passwordConfScavenger">
 	
 							<label for="">Data de Nascimento</label>
-							<input type="date" name="" id="" class="birthday">
+							<input type="date" name="" id="" class="birthdayScavenger">
 	
 							<label for="">Gênero</label>
 							<div class="gender">
