--- a/customer.html
+++ b/customer.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/client.css">
+    <link rel="stylesheet" href="css/costumer.css">
 
-    <title>Profile</title>
+    <title>Perfil Cliente</title>
 </head>
 
 <body>
@@ -22,19 +22,21 @@
         <img src="assets/images/user.png" alt="">
 
         <h3>Bem-vindo</h3>
-        <h2>Usuário</h2>
+        <h2>Cliente</h2>
 
         <nav>
             <ul>
                 <li><p>Dados</p></li>
-                <li><a href="">Meus Dados</a></li>
-                <li><a href="">Endereços</a></li>
+                <li><a href="customer/data.html">Meus Dados</a></li>
+                <li><a href="customer/address.html">Endereços</a></li>
                 <li><p>Coletas</p></li>
-                <li><a href="">Solicitadas</a></li>
-                <li><a href="">Agendadas</a></li>
-                <li><a href="">Histórico</a></li>
+                <li><a href="customer/requested.html">Solicitadas</a></li>
+                <li><a href="customer/scheduled.html">Agendadas</a></li>
+                <li><a href="customer/historic.html">Histórico</a></li>
             </ul>
         </nav>
+
+        <a> Nova Coleta</a>
 
     </div>
 
