--- a/customer/data.html
+++ b/customer/data.html
@@ -10,28 +10,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/scavenger.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/customer/data.css">
 
-    <title>Perfil Catador</title>
+    <title>Perfil Cliente</title>
 </head>
 
 <body>
 
     <div class="sideBar">
-        <img src="assets/images/user.png" alt="">
+        <img src="../assets/images/user.png" alt="">
 
         <h3>Bem-vindo</h3>
-        <h2>Catador</h2>
+        <h2>Cliente</h2>
 
         <nav>
             <ul>
                 <li><p>Dados</p></li>
-                <li><a href="">Meus Dados</a></li>
-                <li><a href=""></a></li>
+                <li><a href="" id="data"> Meus Dados </a></li>
+                <li><a href="address.html"> Endereços </a></li>
                 <li><p>Coletas</p></li>
-                <li><a href="">Agendadas</a></li>
-                <li><a href="">Histórico</a></li>
+                <li><a href="requested.html"> Solicitadas </a></li>
+                <li><a href="scheduled.html"> Agendadas </a></li>
+                <li><a href="historic.html"> Histórico </a></li>
             </ul>
         </nav>
 
@@ -39,16 +40,8 @@
 
     <main>
         
-        <h1>Coletas Solicitadas</h1>
+        <h1>data</h1>
 
-        <section class="coleta">
-            <h3>Pedido #2022</h3>
-            <p><strong>Endereço: </strong></p>
-            <p><strong>Dia: </strong></p>
-
-            <button>Aceitar</button>
-        </section>
-        
 
     </main>
 
