sidebar cliente concluida

--- a/customer.html
+++ b/customer.html
@@ -24,6 +24,8 @@
         <h3>Bem-vindo</h3>
         <h2>Cliente</h2>
 
+        <a href="login.html">&#8592; sair</a>
+
         <nav>
             <ul>
                 <li><p>Dados</p></li>
@@ -36,7 +38,7 @@
             </ul>
         </nav>
 
-        <a> Nova Coleta</a>
+        <a href="customer.html"> Nova Coleta</a>
 
     </div>
 
