--- a/customer/requested.html
+++ b/customer/requested.html
@@ -24,6 +24,8 @@
         <h3>Bem-vindo</h3>
         <h2>Cliente</h2>
 
+        <a href="../login.html">&#8592; sair</a>
+
         <nav>
             <ul>
                 <li><p>Dados</p></li>
@@ -35,6 +37,8 @@
                 <li><a href="historic.html"> Histórico </a></li>
             </ul>
         </nav>
+
+        <a href="../customer.html"> Nova Coleta</a>
 
     </div>
 
