--- a/login.html
+++ b/login.html
@@ -33,11 +33,11 @@
 
 			<div class="form">
 
-				<label for="name">Nome de usuário</label>
-				<input type="text" id="name">
+				<label for="">Nome de usuário</label>
+				<input type="text" class="usernameLogin">
 
-				<label for="password">Senha</label>
-				<input type="password" id="password">
+				<label for="">Senha</label>
+				<input type="password" class="passwordLogin">
 
 				<div class="helpLine">
 
@@ -47,7 +47,7 @@
 
 				</div>
 
-				<button onclick="logIn()">Entrar</button>
+				<button class="loginUser">Entrar</button>
 
 				<div class="div"> </div>
 
@@ -85,7 +85,7 @@
 
 						<h1>Nova Conta - CLIENTE</h1>
 						
-						<form class="registerClient">
+						<form>
 
 							<label for="">Nome</label>
 							<input type="text" name="" id="name" class="name">
@@ -120,7 +120,7 @@
 	
 							</div>
 	
-							<button>cadastrar</button>
+							<button class="registerClient">cadastrar</button>
 
 						</form>
 
