inicio tela data

--- a/customer/data.html
+++ b/customer/data.html
@@ -46,6 +46,22 @@
         
         <h1>data</h1>
 
+        <div class="box">
+            
+            <p class="dado">Nome</p>
+            <p>Guilherme</p>
+            <p class="dado">Sobrenome</p>
+            <p>Azevedo</p>
+            <p class="dado">Nome de usuário</p>
+            <p>guiazevedo17</p>
+            <p class="dado">Telefone</p>
+            <p>14997170127</p>
+            <p class="dado">E-mail</p>
+            <p>gui.azevedo@ymail.com</p>
+            <p class="dado">Data de Nascimento</p>
+
+        </div>
+
 
     </main>
 
