--- a/customer.html
+++ b/customer.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/customer/sidebar.css">
     <link rel="stylesheet" href="css/costumer.css">
 
     <title>Perfil Cliente</title>
@@ -24,8 +25,6 @@
         <h3>Bem-vindo</h3>
         <h2>Cliente</h2>
 
-        <a href="login.html">&#8592; sair</a>
-
         <nav>
             <ul>
                 <li><p>Dados</p></li>
@@ -38,7 +37,9 @@
             </ul>
         </nav>
 
-        <a href="customer.html"> Nova Coleta</a>
+        <a href="customer.html" id="#nova_coleta"> Nova Coleta</a>
+
+        <a href="login.html">&#8592; sair</a>
 
     </div>
 
@@ -63,7 +64,7 @@
 
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/customer/customer.js"></script>
 
 </body>
 
