--- a/customer/requested.html
+++ b/customer/requested.html
@@ -1,56 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/customer/requested.css">
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/customer/sidebar.css" />
+    <link rel="stylesheet" href="../css/customer/requested.css" />
+    <link rel="stylesheet" href="../css/collect.css" />
 
     <title>Perfil Cliente</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="sideBar">
-        <img src="../assets/images/user.png" alt="">
+      <img src="../assets/images/user.png" alt="" />
 
-        <h3>Bem-vindo</h3>
-        <h2>Cliente</h2>
+      <h3>Bem-vindo</h3>
+      <h2>Cliente</h2>
 
-        <a href="../login.html">&#8592; sair</a>
+      <nav>
+        <ul>
+          <li><p>Dados</p></li>
+          <li><a href="data.html"> Meus Dados </a></li>
+          <li><a href="address.html"> Endereços </a></li>
+          <li><p>Coletas</p></li>
+          <li><a href="" id="requested"> Solicitadas </a></li>
+          <li><a href="scheduled.html"> Agendadas </a></li>
+          <li><a href="historic.html"> Histórico </a></li>
+        </ul>
+      </nav>
 
-        <nav>
-            <ul>
-                <li><p>Dados</p></li>
-                <li><a href="data.html"> Meus Dados </a></li>
-                <li><a href="address.html"> Endereços </a></li>
-                <li><p>Coletas</p></li>
-                <li><a href="" id="requested"> Solicitadas </a></li>
-                <li><a href="scheduled.html"> Agendadas </a></li>
-                <li><a href="historic.html"> Histórico </a></li>
-            </ul>
-        </nav>
+      <a href="../customer.html"> Nova Coleta</a>
 
-        <a href="../customer.html"> Nova Coleta</a>
-
+      <a href="../login.html">&#8592; sair</a>
     </div>
 
+    <section class="top">
+      <h1>Coletas Solicitadas</h1>
+    </section>
+
     <main>
-        
-        <h1>requested</h1>
+      <div class="collect">
+        <img src="../assets/images/arvore.png" alt="" />
 
+        <div class="content">
+          <h1>Coleta #1</h1>
+          <ul>
+            <li>Materiais: <span>plástico, vidro</span></li>
+            <li>
+              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
+            </li>
+            <li>Período: <span>tarde</span></li>
+            <li>Observação: <span>vidro quebrado</span></li>
+            <li>Peso: <span>5</span><span>kg</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="collect">
+        <img src="../assets/images/arvore.png" alt="" />
 
+        <div class="content">
+          <h1>Coleta #2</h1>
+          <ul>
+            <li>Materiais: <span>plástico, vidro</span></li>
+            <li>
+              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
+            </li>
+            <li>Período: <span>tarde</span></li>
+            <li>Observação: <span>vidro quebrado</span></li>
+            <li>Peso: <span>5</span><span>kg</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="collect">
+        <img src="../assets/images/arvore.png" alt="" />
+
+        <div class="content">
+          <h1>Coleta #3</h1>
+          <ul>
+            <li>Materiais: <span>plástico, vidro</span></li>
+            <li>
+              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
+            </li>
+            <li>Período: <span>tarde</span></li>
+            <li>Observação: <span>vidro quebrado</span></li>
+            <li>Peso: <span>5</span><span>kg</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="collect">
+        <img src="../assets/images/arvore.png" alt="" />
+
+        <div class="content">
+          <h1>Coleta #4</h1>
+          <ul>
+            <li>Materiais: <span>plástico, vidro</span></li>
+            <li>
+              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
+            </li>
+            <li>Período: <span>tarde</span></li>
+            <li>Observação: <span>vidro quebrado</span></li>
+            <li>Peso: <span>5</span><span>kg</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="collect">
+        <img src="../assets/images/arvore.png" alt="" />
+
+        <div class="content">
+          <h1>Coleta #5</h1>
+          <ul>
+            <li>Materiais: <span>plástico, vidro</span></li>
+            <li>
+              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
+            </li>
+            <li>Período: <span>tarde</span></li>
+            <li>Observação: <span>vidro quebrado</span></li>
+            <li>Peso: <span>5</span><span>kg</span></li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <script type="text/javascript" src="js/index.js"></script>
-
-</body>
-
+  </body>
 </html>
