telas catador finalizadas

--- a/customer/requested.html
+++ b/customer/requested.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/customer/sidebar.css" />
+    <link rel="stylesheet" href="../css/sidebar.css" />
     <link rel="stylesheet" href="../css/customer/requested.css" />
     <link rel="stylesheet" href="../css/collect.css" />
 
