--- a/customer.html
+++ b/customer.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/customer/sidebar.css">
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/costumer.css">
 
     <title>Perfil Cliente</title>
@@ -37,7 +37,7 @@
             </ul>
         </nav>
 
-        <a href="customer.html" id="#nova_coleta"> Nova Coleta</a>
+        <a href="customer.html">Nova Coleta</a>
 
         <a href="login.html">&#8592; sair</a>
 
