--- a/customer/chooseAddress.html
+++ b/customer/chooseAddress.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/customer/sidebar.css" />
+    <link rel="stylesheet" href="../css/sidebar.css" />
     <link rel="stylesheet" href="../css/customer/chooseAddress.css" />
 
     <title>Nova Coleta</title>
