--- a/customer/historic.html
+++ b/customer/historic.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/customer/sidebar.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/customer/historic.css">
     <link rel="stylesheet" href="../css/collect.css">
 
