--- a/scavengers/historic.html
+++ b/scavengers/historic.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/sidebar.css">
-    <link rel="stylesheet" href="css/scavenger.css">
-    <link rel="stylesheet" href="css/collect.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/scavenger/historic.css">
+    <link rel="stylesheet" href="../css/collect.css">
 
     <title>Perfil Catador</title>
 </head>
@@ -21,7 +21,7 @@
 <body>
 
     <div class="sideBar">
-        <img src="assets/images/user.png" alt="">
+        <img src="../assets/images/user.png" alt="">
 
         <h3>Bem-vindo</h3>
         <h2>Catador</h2>
@@ -29,20 +29,20 @@
         <nav>
             <ul>
                 <li><p>Dados</p></li>
-                <li><a href="scavengers/data.html">Meus Dados</a></li>
+                <li><a href="data.html">Meus Dados</a></li>
                 <li><p>Coletas</p></li>
-                <li><a href="scavengers/scheduled.html">Agendadas</a></li>
-                <li><a href="scavengers/historic.html">Histórico</a></li>
+                <li><a href="scheduled.html">Agendadas</a></li>
+                <li><a href="" id="historic">Histórico</a></li>
             </ul>
         </nav>
 
-        <a href="">Coletas</a>
+        <a href="../scavenger.html">Coletas</a>
         <a href="login.html" class="logout">&#8592; sair</a>
 
     </div>
 
     <section class="top">
-        <h1>Coletas Solicitadas</h1>
+        <h1>Histórico de Coletas</h1>
       </section>
 
     <main>
