visual botao de chat implementado

--- a/customer/address.html
+++ b/customer/address.html
@@ -123,6 +123,10 @@
           <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
         </ul>
       </div>
+
+      <button class="chat" onclick="chat()">
+        <img src="../assets/images/chat.png" alt="" />
+      </button>
     </main>
   </body>
 </html>
