--- a/customer/newAddress.html
+++ b/customer/newAddress.html
@@ -74,6 +74,10 @@
 
         <button>cadastrar</button>
       </form>
+
+      <button class="chat" onclick="chat()">
+        <img src="../assets/images/chat.png" alt="" />
+      </button>
     </main>
 
     <script type="text/javascript" src="../js/customer/newAddress.js"></script>
