--- a/customer/requested.html
+++ b/customer/requested.html
@@ -129,6 +129,10 @@
           </ul>
         </div>
       </div>
+
+      <button class="chat" onclick="chat()">
+        <img src="../assets/images/chat.png" alt="" />
+      </button>
     </main>
 
     <script type="text/javascript" src="js/index.js"></script>
