--- a/scavenger.html
+++ b/scavenger.html
@@ -128,9 +128,10 @@
             </div>
           </div>
 
+          <button class="chat" onclick="chat()"><img src="assets/images/chat.png" alt=""></button>
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/chat.js"></script>
 
 </body>
 
