--- a/scavengers/data.html
+++ b/scavengers/data.html
@@ -38,7 +38,7 @@
       </nav>
 
       <a href="../scavenger.html">Coletas</a>
-      <a href="login.html" class="logout">&#8592; sair</a>
+      <a href="../login.html" class="logout">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -46,54 +46,54 @@
     </section>
 
     <main>
+      <a href="">&#128393; Alterar</a>
 
-        <a href="">&#128393; Alterar</a>
+      <div class="box">
+        <span>
+          <p class="dado">Nome</p>
+          Guilherme
+        </span>
+        <span>
+          <p class="dado">Sobrenome</p>
+          Azevedo
+        </span>
+        <span>
+          <p class="dado">Nome de Usuário</p>
+          guiazevedo
+        </span>
+        <span>
+          <p class="dado">E-mail</p>
+          gui.azevedo@ymail.com
+        </span>
+        <span>
+          <p class="dado">Telefone</p>
+          14 997170127
+        </span>
+        <span>
+          <p class="dado">Data de Nascimento</p>
+          17/01/2001
+        </span>
+        <span>
+          <p class="dado">Modo de Trabalho</p>
+          Independente
+        </span>
+        <span>
+          <p class="dado">Materiais de Interesse</p>
+          Metal, Plástico, Vidro
+        </span>
+        <span>
+          <p class="dado">Dias Disponíveis</p>
+          Segunda-Feira
+        </span>
+        <span>
+          <p class="dado">Período Adequado</p>
+          Tarde
+        </span>
+      </div>
 
-        <div class="box">
-            
-            <span>
-                <p class="dado">Nome</p>
-                Guilherme
-            </span>
-            <span>
-                <p class="dado">Sobrenome</p>
-                Azevedo
-            </span>
-            <span>
-                <p class="dado">Nome de Usuário</p>
-                guiazevedo
-            </span>
-            <span>
-                <p class="dado">E-mail</p>
-                gui.azevedo@ymail.com
-            </span>
-            <span>
-                <p class="dado">Telefone</p>
-                14 997170127
-            </span>
-            <span>
-                <p class="dado">Data de Nascimento</p>
-                17/01/2001
-            </span>
-            <span>
-                <p class="dado">Modo de Trabalho</p>
-                Independente
-            </span>
-            <span>
-                <p class="dado">Materiais de Interesse</p>
-                Metal, Plástico, Vidro
-            </span>
-            <span>
-                <p class="dado">Dias Disponíveis</p>
-                Segunda-Feira
-            </span>
-            <span>
-                <p class="dado">Período Adequado</p>
-                Tarde
-            </span>
-
-        </div>
-
+      <button class="chat" onclick="chat()">
+        <img src="../assets/images/chat.png" alt="" />
+      </button>
     </main>
 
     <script type="text/javascript" src="js/index.js"></script>
