--- a/customer/chooseAddress.html
+++ b/customer/chooseAddress.html
@@ -48,7 +48,9 @@
     </section>
 
     <main>
-      <button class="returnNewCollect" onclick="returnNewCollect()">&#8592;</button>
+      <button class="returnNewCollect" onclick="returnNewCollect()">
+        &#8592;
+      </button>
 
       <div class="address">
         <h3>Endereço 1</h3>
@@ -113,6 +115,10 @@
       <div class="bottom">
         <button>finalizar</button>
       </div>
+
+      <button class="chat" onclick="chat()">
+        <img src="../assets/images/chat.png" alt="" />
+      </button>
     </main>
 
     <script type="text/javascript" src="../js/customer/newCollect.js"></script>
