--- a/home.html
+++ b/home.html
@@ -13,11 +13,12 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/home.css">
 
-	<title>Home</title>
+	<title>Green Match</title>
 </head>
 
 <body>
 	<nav>
+		<img src="assets/images/arvore.png" alt="">
 		<h1>green match</h1>
 
 		<ul>
@@ -29,15 +30,26 @@
 	</nav>
 
 	<main>
-		<section id="inicio">	
-			
+		<section id="inicio">
+			<img src="assets/images/green_match.png" alt="">
 			<div class="textAside">
+				<h1>Tem material reciclavel em casa ?</h1>
+				<h2>Reciclar NUNCA foi tão simples</h2>
+				<p>Sabe aquelas latinhas, garrafas e monte de papeis que ficam acumulando em casa e você nunca joga fora por não ter segurança de que serão reciclados, então, é neles que estamos de olho.</p>
+				<p>A Green Match garante a <a href="#recycle">reciclagem</a> pra você ligando você a um catador que trabalha especificamente com o tipo de material que deseja descartar e o melhor no momento que lhe convem.</p>
+				<p class="atention">Clique em ENTRAR, cadastre-se e contribua com a reciclagem!</p>
+			</div>
+		</section>
+
+		<section id="recycle">	
+			
+			<div class="textAside2">
 				
 				<h1>Reciclagem</h1>
 				<p>A reciclagem é o processo de reaproveitamento de materiais descartados. Seu objetivo é reintroduzi-los na cadeia produtiva a fim de que ainda gerem valor e sejam reutilizados, reduzindo-se a produção de lixo, aumentando a preservação dos recursos naturais e melhorando a qualidade de vida das pessoas.</p>
 			</div>
 			
-			<img src="assets/images/recycling_homepage.png" alt="">
+			<img src="assets/images/recycling.png" alt="">
 	
 		</section>
 	
@@ -48,7 +60,7 @@
 
 			<img src="assets/images/office.png" alt="">
 
-			<p>Fundada em 2022 a partir de um projeto acadêmico a/o "NOME" é constituida por 4 alunos de Engenharia de Software da PUCCAMP, com a ideia de aplicar a Sustentabilidade no dia a dia das pessoas por meio da <a href="#inicio">reciclagem</a>, que apesar de muito comentada é pouco executada. Por conta disso dispertou nosso interesse em fazer a diferença e exercitar diariamente isto que deve-se tornar hábito na vida de todos.</p>
+			<p>Fundada em 2022 a partir de um projeto acadêmico a/o "NOME" é constituida por 4 alunos de Engenharia de Software da PUCCAMP, com a ideia de aplicar a Sustentabilidade no dia a dia das pessoas por meio da <a href="#recycle">reciclagem</a>, que apesar de muito comentada é pouco executada. Por conta disso dispertou nosso interesse em fazer a diferença e exercitar diariamente isto que deve-se tornar hábito na vida de todos.</p>
 	
 		</section>
 	
