front faltando apenas comunicacao coletas

--- a/customer.html
+++ b/customer.html
@@ -40,7 +40,7 @@
 
       <a href="customer.html">Nova Coleta</a>
 
-      <a href="login.html">&#8592; sair</a>
+      <a href="home.html">&#8592; sair</a>
     </div>
 
     <main>
