--- a/scavenger.html
+++ b/scavenger.html
@@ -37,7 +37,7 @@
         </nav>
 
         <a href="">Coletas</a>
-        <a href="login.html" class="logout">&#8592; sair</a>
+        <a href="home.html" class="logout">&#8592; sair</a>
 
     </div>
 
