cadastro de endereço

--- a/customer/chooseAddress.html
+++ b/customer/chooseAddress.html
@@ -113,7 +113,7 @@
       </div>
 
       <div class="bottom">
-        <button>finalizar</button>
+        <button onclick="newCollect()">finalizar</button>
       </div>
 
       <button class="chat" onclick="chat()">
@@ -121,6 +121,6 @@
       </button>
     </main>
 
-    <script type="text/javascript" src="../js/customer/newCollect.js"></script>
+    <script type="text/javascript" src="../js/customer/chooseAddress.js"></script>
   </body>
 </html>
