--- a/customer/data.html
+++ b/customer/data.html
@@ -53,7 +53,7 @@
       <div class="box">
         <span>
           <p class="dado">Nome</p>
-          Guilherme
+          <span id="name"></span>
         </span>
         <span>
           <p class="dado">Sobrenome</p>
@@ -61,19 +61,19 @@
         </span>
         <span>
           <p class="dado">Nome de Usuário</p>
-          guiazevedo
+          <span id="username"></span>
         </span>
         <span>
           <p class="dado">E-mail</p>
-          gui.azevedo@ymail.com
+          <span id="email"></span>
         </span>
         <span>
           <p class="dado">Telefone</p>
-          14 997170127
+          <span id="phone"></span>
         </span>
         <span>
           <p class="dado">Data de Nascimento</p>
-          17/01/2001
+          <span id="birthDate"></span>
         </span>
       </div>
 
@@ -82,6 +82,6 @@
       </button>
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/customer/data.js"></script>
   </body>
 </html>
