--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -170,6 +170,6 @@
       </button>
     </main>
 
-    <script type="text/javascript" src="../js/customer/customer.js"></script>
+    <script type="text/javascript" src="../js/customer/chooseAddress.js"></script>
   </body>
 </html>
